--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,8 @@
 theme: jekyll-theme-architect
+title: Blargbot Custom Commands
+repotitle: Blargbot Custom Commands
+author: The BCC Team
+authorurl: https://dynocc.tk/staff
+url: https://blargbotcc.tk
+image: https://dynocc.tk/files/dcc_logo.png
+color: "#00a2ff"
