--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ theme: jekyll-theme-architect
 title: Blargbot Custom Commands
 repotitle: Blargbot Custom Commands
 author: The BCC Team
-authorurl: https://dynocc.tk/staff
+authorurl: https://blargbotcc.tk/staff
 url: https://blargbotcc.tk
 image: https://dynocc.tk/files/dcc_logo.png
 color: "#00a2ff"
