--- a/_config.yml
+++ b/_config.yml
@@ -4,5 +4,5 @@ repotitle: Blargbot Custom Commands
 author: The BCC Team
 authorurl: https://blargbotcc.tk/staff
 url: https://blargbotcc.tk
-image: https://dynocc.tk/files/dcc_logo.png
+image: https://blargbotcc.tk/files/bcc_logo.png
 color: "#00a2ff"
