Add Google Analytics

--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,6 @@ authorurl: https://blargbotcc.tk/staff
 url: https://blargbotcc.tk
 image: https://blargbotcc.tk/files/bcc-logo.png
 color: "#00a2ff"
-
+google_analytics: UA-122079696-1
 plugins:
   - jekyll-sitemap
